Fixed scroll + collapse button visibility

--- a/VerkeerREST/web/sass/style.scss
+++ b/VerkeerREST/web/sass/style.scss
@@ -98,16 +98,23 @@ h2 {
 }
 #dashboard {
 	position: fixed;
-	overflow: auto;
 	top: 0;
 	left: $settings-width;
 	bottom: 0;
-	width: $dashboard-width - 60;
+	width: $dashboard-width;
 	background: $background-gray;
-
-	padding: 30px 20px 0 40px;
 	z-index: 0;
 
+	.content {
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		// padding NIET via left, right, top, bottom doen, anders kloppen scrollbalk posities niet
+		padding: 30px 20px 0 40px;
+		overflow: auto;
+	}
 	.shadow {
 		left: $dashboard-width;
 	}
@@ -115,6 +122,7 @@ h2 {
 	&.expand_collapse {
 		left: -($dashboard-width)+$settings-width;
 	}
+	
 }
 
 #map-container {
